# nix-scraper

./: .gitignore  README.md  TODO.md  Untitled.ipynb  flake.nix  kernels.nix  pyproject.toml  statics.nix
src/libs/: fakewait.py  huey_tasks.py
src/libs/.ipynb_checkpoints/: fakewait-checkpoint.py
src/notebooks/: Async-manager.ipynb  server.ipynb
