[tool.poetry]
name = "ws-async-lib"
version = "0.1.0"
description = "My attempt at making a dashboard flask app"
authors = ["volkswagenfeature <2@2.2>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
Flask = "^3.0.2"
pandas = "^2.2.1"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
